--- a/Regex.ipynb
+++ b/Regex.ipynb
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6be48165",
+   "id": "b380b387",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "81a0fcff",
+   "id": "7b98dab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2d3f76e0",
+   "id": "0589514f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f1e82641",
+   "id": "8144c575",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6c4f6d4b",
+   "id": "caafe08e",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4794f8d9",
+   "id": "bb4935f7",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9f1a35dc",
+   "id": "cea68e80",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "87d1b351",
+   "id": "f4fe8f71",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "172e6e82",
+   "id": "569e59b4",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8907aab2",
+   "id": "b156c602",
    "metadata": {},
    "outputs": [
     {
@@ -1118,8 +1118,457 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "00dd5140",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['handy', 'hands', 'handle']"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items = ['-handy', 'hand', 'handy', 'unhand', 'hands', 'handle']\n",
+    "[w for w in items if re.fullmatch(r'hand([sy]|le)',w)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "254de064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = \"Mohit Rao Niwadunge\\n\\t \\t Email ID mohit.niwadunge@gmail.com\\n\\t Skype name - mohit.niwadunge\\t\\n\\t \\t Contact no +91 7000526216\\t\\n\\t\\n\\t\\nExperience Summary\\nOverall 3.10 Years of experience in Web Based Projects in Codeigniter, Zend, Laravel, Angular JS, react JS,Vue Js, raj@kavin.com, glen@pet.in PHP, MySQL, KAVIRAJ@KTEKRESOURCING.COM ,JavaScript, AJAX, XML ,Docker and good grasp of Object Oriented Programming.\\nWorking as a Software Engineer with Webdunia India Pvt. Ltd.\\nProficient in Admin CMS, front end frameworks and Ecommerce domains.\\nAdept in interaction with client to gather, analyze and track the detailed requirements.\\nThird Party Integrations Kaltura, Mixpanel, Aspera etc. \\nQuick Learner and willing to adapt to new challenges technologies.\\nTechnical Skills\\nCore PHP, Codeigniter, Zend, Laravel , Joomla, Word press, YII framework basics, PrestaShop, Open-Cart, Scratch, MVC architecture, web services, Soap Services, API Integrations basics of frontend technologies.\\nPHP, HTML4, HTML5, CSS2, CSS3,MYSQL,Firebase,PDO, JavaScript, XML, AJAX, JQuery, Angular JS, React JS,Vue Js,Docker\\nCertification - OCJP JSE6 Programmer Certified Professional Exam\\nKey Responsibilities\\nHandling various tasks like training, development, and client communication\\nDesign and built the distributed software application\\nAbility to code optimally and choose the right tool based on the technologies available to the audience.\\nKnowledge sharing and technical problem solving.\\nDesign, Coding and Unit Testing\\nActive and lead participant in the company s Event Management activity.\\nEducational Profile\\nBachelor of Engineering in Computer Science 2009-2013 from LNCT S affiliated to RGPV, Bhopal with 72.31 aggregate.\\nHSC 2009 from SOE School with 72.60 aggregate.\\nSSC 2007 from GBH School with 72.00 aggregate.\\nWork Experience \\n\\tTitle \\nBSD Advocacy platform\\n\\tDescription\\nIt allows the supporters of clients to contact the President, Members of Congress, Governors, and other elected officials in the United States, the United Kingdom, and Canada via Email, Twitter or Phone call.\\n\\tRoles Responsibilities\\n\\tRequirement understanding of the client.\\n\\tDemoed developed functionalities.\\n\\tTools Used \\nPHP, Laravel , MySQL, JQuery, AJAX, React-Redux, Docker, Swagger API Specification\\n\\tTitle \\nVoot TV App\\n\\tDescription\\nVoot TV Application provides the feature to view TV Series, Movies, Episodes and clips directly through its home page. Content can be filtered based on genre and language. Recently watched videos can also be viewed directly through a separate module.\\n\\tRoles Responsibilities\\n\\tDiscussed requirements with the client and demoed developed functionalities.\\n\\tAnalyzed the requirements and guided developers in forming the technical solution.\\n\\tPrepared execution plan.\\n\\tTools Used \\nPHP, Zend , MySQL, JQuery, AJAX, AWS API s\\n\\tTitle \\nVoot\\n\\tDescription\\nA video on demand platform to provide each every TV shows associated with Viacom 18 channels along with the movies, original series of shows and cartoons.\\n\\tRoles Responsibilities\\n\\tRequirements analysis understanding.\\n\\tGuided developers in forming the technical solution.\\n\\tPrepared execution plan.\\n\\tTools Used \\nPHP, Zend , MySQL, JQuery, AJAX, Angular JS , Redis cache, Akamai, Kaltura, aspera use tracking s events. \\n\\tTitle \\nTutor Connect Admin \\n\\tDescription\\nA Website to contact with tutors to attend different courses offered by them. User can select the available time slot and book the seat by paying through both online offline. \\n\\tRole Responsibilities\\n\\tSeparate backend database management for client and users.\\n\\tAnalyzed the requirements and guided developers in forming the technical solution.\\n\\tPrepared execution plan and kept track of project.\\n\\tTools Used \\nPHP, Laravel , MySQL, JQuery, Apache , AJAX, Angular JS , HTML5, CSS3\\n\\tTitle \\nPaper Bag Application Admin Application \\n\\tDescription\\nAn admin application to keep track of the work progress of all employees along with the status of project development to generate notification for higher authorities.\\n\\tRoles Responsibilities\\n\\tProvide analytics to admin and client users.\\n\\tDemonstration of developed functionalities and took closure when required.\\n\\tPrepared execution plan and kept track of project.\\n\\tTools Used \\nPHP, Codeigniter , MySQL, JQuery, Apache , AJAX, HTML5,CSS3\\n\\tTitle \\nIndiantheme\\n\\tDescription\\nA Website that provide the details of best sellers of Indian Fashion, jewelers and handicrafts in India and allow the users to connect with them for further enquiry.\\n\\tRoles Responsibilities\\n\\tDiscussed requirements with client and prepared exhaustive feature list.\\n\\tInteracted with third parties for the required integration and planning.\\n\\tPrepared execution plan and kept track of project.\\n\\tProvide analytics to both client and user to manage their profiles.\\n\\tTools Used \\nPHP, Codeigniter , MySQL, JQuery, Apache , AJAX, HTML5, CSS3\"\n",
+    "re.findall((r'[a-zA-Z0-9\\.\\-+_]+@[a-zA-Z0-9\\.\\-+_]+\\.[a-zA-Z]+'),'.example.co')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "565c0a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'redo X credible :X: rod X'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 'redo red credible :read: rod reed' \n",
+    "re.sub(r'\\bre[ae]?d\\b','X',i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "12d79c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['surrender', 'unicorn', 'eel']"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = ['surrender', 'unicorn', 'newer', 'door', 'empty', 'eel', 'pest']\n",
+    "[w for w in words if re.search(r'[ei].*[ln]',w)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "c02597ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['surrender', 'unicorn', 'newer', 'eel']"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[w for w in words if re.search(r'[ei].*[ln]|[ln].*[ei]',w)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "d573003b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1 = 'def factorial()'\n",
+    "str2 = 'a/b(division) + c%d(#modulo) - (e+(j/k-3)*4)'\n",
+    "str3 = 'Hi there(greeting). Nice day(a(b)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "88b92174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_paren = re.compile(r'\\([^()]*\\)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "5438bd64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi there. Nice day(a'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_paren.sub('', str3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "50611bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tea', 'ear']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = ['p-t', 'you', 'tea', 'heel', 'owe', 'new', 'reed', 'ear']\n",
+    "[w for w in words if not re.search(r'[uw-]|ee',w)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b93e3b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pat = re.compile(r'[\\d\\s]+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "824b7578",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['lion', 'Ink', 'onion', 'Nice']"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat.split('lion \\t Ink32onion Nice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "5b90a3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['**', 'star', '**']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pat.split('**1\\f2\\n3star\\t7 77\\r**')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "bfcddb1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a 1<> b 2<> c'"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.sub(r'<[^>]+>', '', 'a<apple> 1<> b<bye> 2<> c<cat>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "01cde8bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hi0000634abcd', 'car00625', '3.14 96 2 foo1234baz']"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items = ['hi0000634abcd','hi0000432abcd', 'car00625', '42_624 0512', '3.14 96 2 foo1234baz']\n",
+    "[e for e in items if any(int(m[0])>624 for m in re.finditer(r'\\d+',e))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "d595a1e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['so', 'pole', 'lit', 'in', 'to']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ip = ' \\t\\r  so  pole\\t\\t\\t\\n\\nlit in to \\r\\n\\v\\f  '\n",
+    "\n",
+    "ip.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "a66b1581",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['so', 'pole', 'lit', 'in', 'to']"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'\\S+',ip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "7b52d13d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['price_42', ' ', 'roast', '^\\t\\n^-', 'ice', '==', 'cat', '\\n', 'east']"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i ='price_42 roast^\\t\\n^-ice==cat\\neast'\n",
+    "\n",
+    "re.split(r'\\W+',i)\n",
+    "\n",
+    "re.split(r'(\\W+)',i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "29bda7db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\t\\napple #42', 'sure', 'no#1']"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items= ['    #comment', '\\t\\napple #42', '#oops', 'sure', 'no#1', '\\t\\r\\f']\n",
+    "[e for e in items if re.search(r'\\A\\s*[^#\\s]',e)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "be74c4b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sequoia [subtle] exhibit asset [sets] tests [site]'"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 'sequoia subtle exhibit asset sets tests site'\n",
+    "\n",
+    "re.sub(r'\\bs\\w*(t\\w*e|e\\w*t)\\w*', r'[\\g<0>]', i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "a7d3928a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string =  '''oppressed abandon accommodation bloodless carelessness committed apparition innkeeper occasionally afforded embarrassment foolishness depended successfully succeeded possession cleanliness suppress'''\n",
+    "len(re.findall(r'\\b(\\w*(\\w)\\2){2}\\w*\\b',string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "e335d818",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(re.findall(r'\\b(\\w*(\\w)\\2){2}\\w*\\b',string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "edbd6080",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1234 23 4535 9339 1 60260260'"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = '1234 2323 453545354535 9339 11 60260260'\n",
+    "\n",
+    "re.sub(r'\\b(\\d+)\\1+\\b',r'\\1',p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "23dc3499",
+   "id": "a5e2ef3a",
    "metadata": {},
    "outputs": [],
    "source": []
